// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`na začátku 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "isSigningIn": false,
      "showError": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "mezicasy": Array [],
    "stopky": Object {
      "base": null,
      "running": false,
    },
  },
  "connected": false,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
    },
  },
  "registrator": Object {
    "ucastniciDigest": Object {
      "isFetching": false,
      "kategorieVykonuFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
  "startujici": Array [],
}
`;

exports[`websocket connected 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "isSigningIn": false,
      "showError": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "mezicasy": Array [],
    "stopky": Object {
      "base": null,
      "running": false,
    },
  },
  "connected": true,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
    },
  },
  "registrator": Object {
    "ucastniciDigest": Object {
      "isFetching": false,
      "kategorieVykonuFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
  "startujici": Array [],
}
`;

exports[`websocket disconnected 1`] = `
Object {
  "auth": Object {
    "authenticated": false,
    "signIn": Object {
      "errorCode": "",
      "errorMessage": "",
      "isSigningIn": false,
      "showError": false,
    },
    "token": null,
  },
  "casomeric": Object {
    "mezicasy": Array [],
    "stopky": Object {
      "base": null,
      "running": false,
    },
  },
  "connected": false,
  "entities": Object {
    "kategorie": Object {},
    "rocniky": Object {
      "byRoky": Object {},
      "roky": Array [],
    },
    "ucastnici": Object {
      "allIds": Array [],
      "byIds": Object {},
    },
  },
  "registrator": Object {
    "ucastniciDigest": Object {
      "isFetching": false,
      "kategorieVykonuFilter": "",
      "sortColumn": undefined,
      "sortDir": "none",
      "textFilter": "",
    },
  },
  "startujici": Array [],
}
`;
